# carboncalc

./: README.md  setup.cfg
carbonsimulator/: calculator.py  notebook.ipynb  utils.py
data/: aliments.csv  aliments_final.csv  energie_filtered.csv  equipements.csv  equipements_filtered.csv
