[metadata]
name = carbsimulator
version = 0.1.0
description = Librairie permettant à un restaurateur de calculer son empreinte carbonne
long_description = file: README.md
author = Amer Hichem Chouaou
author_email = hachouaou@gmail.com

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.package_data]
* = requirements.txt